--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+body{
+  font: 1.6rem Nexa;
+  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+}
+.grid-container{
+  display: grid;
+  grid-template-areas: "header""main""footer";
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 50px 1fr 50px;
+  height: 100%;
+}
+.header{
+  grid-area: header;
+  background-color: #203040;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+
+}
+.brand a{
+  color: white;
+  padding-left: 10px;
+  font-family: Courgette;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-links a{
+  padding-right: 10px;
+  color: white;
+  text-decoration: none;
+  padding-left:5px ;
+
+}
+.header-links a:hover{
+  color: orange;
+}
+.main{
+  grid-area: main;
+}
+.footer{
+  grid-area: footer;
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: auto;
+
+
+}
+
+/*home*/
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+.products li{
+  list-style-type: none;
+  padding: 0;
+  flex: 0 1 34rem;
+  margin: 1rem;
+  height: 50rem;
+  border-bottom: .1rem #c0c0c0 solid;
+
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product-name{
+  font-size: 2rem;
+}
+.products-brand{
+  font-size: 1.2rem;
+  color: #808080;
+}
+.price{
+  font-weight: bold;
+}
+.product-img{
+  max-width: 34rem;
+  max-height: 34rem;
+;
+}
+
+/*sidebar*/
+.brand button{
+  font-size: 3rem;
+  padding: .5rem;
+  background: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+.sidebar{
+  position: fixed;
+  transition: all .5s;
+  transform: translateX(-30rem);
+  width:30rem ;
+  background-color: #f0f0f0;
+  height: 100%;
+  text-decoration: none;
+
+}
+.sidebar.open{
+  transform: translateX(0);
+}
+.sidebar-close-button{
+  border-radius: 50%;
+  border:.1rem black solid;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2rem ;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  right: .5rem;
+  top: 2rem;
 }
